--- a/.github/workflows/pipeline-workflow.yml
+++ b/.github/workflows/pipeline-workflow.yml
@@ -45,6 +45,9 @@ jobs:
       - name: install aws-cdk
         run: npm install -g aws-cdk
 
+      - name: install aws-sdk
+        run: npm install -g aws-sdk
+
       - name: npm install
         run: npm install
 
