--- a/.github/workflows/pipeline-workflow.yml
+++ b/.github/workflows/pipeline-workflow.yml
@@ -45,8 +45,17 @@ jobs:
       - name: install aws-cdk
         run: npm install -g aws-cdk
 
-      - name: install aws-sdk
-        run: npm install -g aws-sdk
+      - name: install packages for custom-resource
+        working-directory: source/custom-resource 
+        run: npm install
+
+      - name: install packages for image-handler
+        working-directory: source/image-handler 
+        run: npm install
+
+      - name: install packages for demo-ui
+        working-directory: source/demo-ui
+        run: npm install
 
       - name: npm install
         run: npm install
