--- a/source/custom-resource/package.json
+++ b/source/custom-resource/package.json
@@ -22,6 +22,7 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/aws-sdk": "^2.7.0",
     "@types/jest": "^29.5.6",
     "@types/node": "^20.10.4",
     "@types/uuid": "^9.0.6",
