added npm install for image-handler

--- a/.github/workflows/pipeline-workflow.yml
+++ b/.github/workflows/pipeline-workflow.yml
@@ -53,6 +53,10 @@ jobs:
       - name: npm install for custom resource
         working-directory: source/custom-resource
         run: npm install
+      
+      - name: npm install image-handler
+        working-directory: source/image-handler
+        run: npm install
 
       - name: install aws-cdk
         run: npm install -g aws-cdk
