--- a/.github/workflows/pipeline-deploy-workflow.yml
+++ b/.github/workflows/pipeline-deploy-workflow.yml
@@ -3,6 +3,7 @@ name: Pipeline Workflow
 env:
   AWS_DEPLOY_ROLE_ARN: arn:aws:iam::637747527212:role/github-actions
   REGION: us-east-1
+  ACCOUNT: 637747527212
   DIST_OUTPUT_BUCKET: my-serverless-image-handler-images
   SOLUTION_NAME: my-serverless-image-handler
   VERSION: 1
