--- a/.github/workflows/pipeline-bootstrap-workflow.yml
+++ b/.github/workflows/pipeline-bootstrap-workflow.yml
@@ -1,4 +1,4 @@
-name: Pipeline Workflow
+name: Bootstrap Infrastructure
 
 env:
   AWS_DEPLOY_ROLE_ARN: arn:aws:iam::637747527212:role/github-actions
