--- a/source/constructs/package.json
+++ b/source/constructs/package.json
@@ -29,6 +29,7 @@
     "@types/jest": "^29.5.6",
     "@types/node": "^20.10.4",
     "aws-cdk": "^2.124.0",  
+    "aws-sdk": "^2.1529.0",
     "aws-cdk-lib": "^2.124.0",
     "constructs": "^10.3.0",
     "esbuild": "^0.19.10",
