--- a/.github/workflows/pipeline-bootstrap-workflow.yml
+++ b/.github/workflows/pipeline-bootstrap-workflow.yml
@@ -6,7 +6,7 @@ env:
   ACCOUNT: 637747527212
   SOURCE_BUCKET: my-serverless-image-handler-images,alternative-images
   SOLUTION_NAME: my-serverless-image-handler
-  STAGE: image
+  STAGE: staging
   VERSION: 1
 
 on:
